# snake-social

./: .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  openapi.yaml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/scripts/: seed_db.py
backend/src/: config.py  crud.py  database.py  main.py  models.py
backend/src/routes/: auth.py  game.py  leaderboard.py
backend/src/tests/: conftest.py  test_api.py
backend/test_integrations/: conftest.py  test_auth.py  test_game.py  test_leaderboard.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/client/: index.ts
frontend/src/client/models/: ActivePlayer.ts  GameMode.ts  GameState.ts  LeaderboardEntry.ts  User.ts
frontend/src/client/services/: AuthService.ts  GameService.ts  LeaderboardService.ts
frontend/src/components/: AuthModal.tsx  GameBoard.tsx  Header.tsx  SnakeGame.tsx  WatchMode.tsx
frontend/src/services/: api.ts
frontend/src/test/: api.test.ts  auth.test.tsx  leaderboard.test.tsx  watchMode.test.tsx
src/: index.css
src/components/: GameBoard.tsx  Header.tsx  Leaderboard.tsx  SnakeGame.tsx  WatchMode.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useSnakeGame.ts
src/pages/: Index.tsx
src/services/: api.ts
src/test/: api.test.ts  auth.test.tsx  gameBoard.test.tsx  leaderboard.test.tsx  snakeGame.test.ts  watchMode.test.tsx
